# HOJA-LIB-RP2040

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
drivers/haptic/: drv2605l.c
drivers/imu/: lsm6dsr.c
hal/rp2040/: gpio_hal.c  hdrumble_hal.c  i2c_hal.c  spi_hal.c  sys_hal.c
include/: devices_shared_types.h  driver_define_helper.h  hoja.h  hoja_comms.h  hoja_defines.h  hoja_drivers.h  hoja_err.h  hoja_hal.h  hoja_includes.h  hoja_settings.h  hoja_shared_types.h  hoja_system.h  hoja_types.h  hoja_usb.h  input_shared_types.h  rgb_define_helper.h  settings_shared_types.h
include/cores/: core_gamecube.h  core_n64.h  core_sinput.h  core_slippi.h  core_snes.h  core_switch.h  core_xinput.h  cores.h
include/devices/: adc.h  battery.h  bluetooth.h  btinput.h  devices.h  ds4input.h  fuelgauge.h  gamecube.h  gcinput.h  haptics.h  lamp_array.h  n64.h  n64_crc.h  nspi.h  rgb.h  swpro.h  webusb.h  wlan.h  xinput.h  xinputhid.h
include/devices/animations/: anm_authentic.h  anm_authentic_palettes.h  anm_external.h  anm_fairy.h  anm_handler.h  anm_idle.h  anm_none.h  anm_rainbow.h  anm_react.h  anm_shutdown.h  anm_utility.h  or_flash.h  or_indicate.h  ply_blink.h  ply_chase.h  ply_idle.h  ply_shutdown.h  rgb_modes.h
include/drivers/: drivers.h
include/drivers/adc/: ads7142.h  mcp3002.h  tmux1204.h
include/drivers/battery/: bq25180.h
include/drivers/bluetooth/: esp32_hojabaseband.h
include/drivers/fuelgauge/: adc_fuelgauge.h  bq27621g1.h
include/drivers/haptic/: drv2605l.h
include/drivers/imu/: lsm6dsr.h
include/drivers/mux/: pi3usb4000a.h  tmux1204.h
include/extensions/: battery.h  bluetooth.h  capabilities.h  haptics.h  hwtest.h  rgb.h  settings.h
include/hal/: adc_hal.h  bluetooth_hal.h  erm_hal.h  flash_hal.h  gpio_hal.h  hal.h  haptics_hal.h  hdrumble_hal.h  i2c_hal.h  joybus_gc_hal.h  joybus_n64_hal.h  lra_hal.h  mutex_hal.h  nesbus_hal.h  peripheral_cfg.h  rgb_hal.h  sdrumble_hal.h  spi_hal.h  store_hal.h  sys_hal.h  usb_hal.h  wlan_hal.h
include/hal/rp2040/: btstack_config.h  hoja_bsp.h  lwipopts.h  tusb_config.h
include/input/: analog.h  button.h  dpad.h  hover.h  idle_manager.h  imu.h  input.h  input_config.h  macros.h  mapper.h  remap.h  safemode.h  snapback.h  stick_deadzone.h  stick_scaling.h  trigger.h  triggers.h
include/input/macros/: macro_pairing.h  macro_pcmdebug.h  macro_shutdown.h  macro_tourney.h
include/input/snapback/: snapback_auto.h  snapback_lpf.h  snapback_utils.h
include/switch/: switch_analog.h  switch_commands.h  switch_fp_haptics.h  switch_haptics.h  switch_motion.h  switch_spi.h
include/transport/: transport.h  transport_bt.h  transport_joybus64.h  transport_joybusgc.h  transport_nesbus.h  transport_usb.h  transport_wlan.h
include/usb/: desc_bos.h  dinput.h  ds4input.h  gcinput.h  ginput_device.h  ginput_usbd.h  hoja_usb.h  opengp.h  sinput.h  swpro.h  usb.h  webusb.h  xinput.h  xinput_series.h  xinput_usbd.h
include/utilities/: battery.h  boot.h  callback.h  capabilities.h  crosscore_snapshot.h  crosscore_utils.h  erm_simulator.h  haptics.h  hooks.h  hwtest.h  i2c_safe.h  interval.h  music_notes.h  n64_crc.h  pcm.h  pcm_samples.h  reboot.h  rgb.h  ringbuffer.h  settings.h  spi_safe.h  static_config.h  sysmon.h  tasks.h  transport.h
include/wired/: gamecube.h  n64.h  nesbus.h  nspi.h  wired.h
pio/: joybus.pio  nesbus.pio  nserial.pio  ws2812.pio
src/: hoja.c  hoja_comms.c  hoja_defines.c  hoja_settings.c
src/cores/: core_gamecube.c  core_n64.c  core_sinput.c  core_slippi.c  core_snes.c  core_switch.c  core_template.c  core_xinput.c  cores.c
src/devices/: adc.c  battery.c  bluetooth.c  btinput.c  devices.c  ds4input.c  fuelgauge.c  gamecube.c  gcinput.c  haptics.c  joybus64.c  joybusgc.c  lamp_array.c  n64.c  nspi.c  rgb.c  swpro.c  webusb.c  wlan.c  xinput.c  xinputhid.c
src/devices/animations/: ani_queue.c  anm_authentic.c  anm_authentic_palettes.c  anm_external.c  anm_fairy.c  anm_handler.c  anm_idle.c  anm_none.c  anm_rainbow.c  anm_react.c  anm_shutdown.c  anm_utility.c  ply_blink.c  ply_chase.c  ply_idle.c  ply_shutdown.c
src/drivers/: drivers.c
src/drivers/adc/: ads7142.c  mcp3002.c  tmux1204.c
src/drivers/battery/: bq25180.c
src/drivers/bluetooth/: esp32_hojabaseband.c
src/drivers/fuelgauge/: adc_fuelgauge.c  bq27621g1.c
src/drivers/haptic/: drv2605l.c
src/drivers/imu/: lsm6dsr.c
src/drivers/mux/: pi3usb4000a.c  tmux1204.c
src/extensions/: battery.c  bluetooth.c  haptics.c
src/hal/: hal.c
src/hal/rp2040/: adc_hal.c  bluetooth_hal.c  erm_hal.c  flash_hal.c  gpio_hal.c  haptics_hal.c  hdrumble_hal.c  i2c_hal.c  joybus_gc_hal.c  joybus_n64_hal.c  lra_hal.c  mutex_hal.c  nesbus_hal.c  rgb_hal.c  spi_hal.c  sys_hal.c  usb_hal.c  usb_hal_slippi.c  usb_hal_xinput.c  wlan_hal.c
src/input/: Untitled-1.c  analog.c  bsnapback.c  button.c  dpad.c  filter_test.html  hover.c  idle_manager.c  imu.c  input.c  irsnapback.c  macros.c  mapper.c  primarysnapback.c  remap.c  safemode.c  snapback.c  snapback_dataset.txt  stick_deadzone.c  stick_scaling.c  trigger.c  triggers.c
src/input/macros/: macro_pairing.c  macro_pcmdebug.c  macro_shutdown.c  macro_tourney.c
src/input/snapback/: snapback_auto.c  snapback_lpf.c  snapback_utils.c
src/switch/: command table conversion.txt  oldswitch_haptics__  switch_analog.c  switch_commands.c  switch_haptics.c  switch_motion.c  switch_spi.c
src/switch/haptics_unknown/: decoding.c  haptic notes  pair_decoder.c
src/transport/: transport.c  transport_bt.c  transport_joybus64.c  transport_joybusgc.c  transport_nesbus.c  transport_usb.c  transport_wlan.c
src/usb/: desc_bos.c  dinput.c  ds4input.c  gcinput.c  ginput_device.c  ginput_usbd.c  hoja_usb.c  opengp.c  sinput.c  swpro.c  usb.c  webusb.c  xinput.c  xinput_device.c  xinput_usbd.c
src/utilities/: battery.c  boot.c  erm_simulator.c  haptics.c  hooks.c  i2c_safe.c  interval.c  pcm.c  reboot.c  rgb.c  ringbuffer.c  settings.c  spi_safe.c  static_config.c  sysmon.c  tasks.c  transport.c
src/wired/: gamecube.c  n64.c  nesbus.c  nspi.c  wired.c
